# retro-game-crew

./: .gitignore  README.md  pyproject.toml
src/retro_game_crew/: crew.py  main.py
src/retro_game_crew/config/: agents.yaml  tasks.yaml
